# javazone-2023

./: package.json  q
app/: README.md  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs
app/src/: app.html
app/src-microbit/attempts/: attempt2.json
app/src-microbit/src/utilities/: parse.rs
app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
app/src-tauri/src/: main.rs  main.rs.bak
app/src-tauri/src/utilities/: bt_connect.rs  bt_scan.rs  db.rs  flash_to_microbit.rs  mod.rs  serial_comm.rs  setup_ws_server.rs
app/src/lib/: BluetoothDebugger.svelte  BluetoothScan.svelte  Documentation.svelte  Editor.svelte  FlashMicrobit.svelte  Leaderboard.svelte  RegisterPlayer.svelte  Sidebar.svelte  WebSocket.svelte  stores.ts  types.ts
app/src/routes/: +layout.svelte  +page.svelte  Header.svelte
app/src/routes/admin/: +page.svelte
app/src/routes/debug/: +page.svelte
app/src/routes/microbit/: +page.svelte
app/src/routes/play/: +page.svelte
app/src/routes/ws/: +page.svelte
app/src/utils/: cn.ts  set_script_lang.ts
bitbot_robot/: main.py
bitbot_robot/serial-comm/: main.py
src/: letters.json
src-microbit/: Cargo.toml  build.rs
src-microbit/.cargo/: config.toml
src-microbit/attempts/: attempt1.txt  attempt2.json  demo.txt
src-microbit/src/: lib.rs
src-tauri/: Cargo.toml
src/lib/: Greet.svelte
web_app/: .gitignore  .prettierrc  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs  tailwind.config.ts  vite.config.ts
web_app/src/: app.css  app.html
web_app/src/lib/: Leaderboard.svelte  RegisterPlayer.svelte  Sidebar.svelte  database.types.ts  logo.svelte  stores.ts  types.ts
web_app/src/routes/: +layout.svelte  +page.svelte  +page.ts  Header.svelte
web_app/src/routes/api/player/: +server.ts  player.api.test.ts
web_app/src/routes/api/score/: +server.ts  score.api.test.ts
web_app/src/routes/api/v1/player/: +server.ts  player.api.mock.ts
web_app/src/routes/api/v1/score/: +server.ts  score.api.test.ts
web_app/src/routes/api/v2/player_score/: +server.ts  (+1 more)
web_app/src/routes/leaderboard/: +page.svelte
web_app/src/routes/presentation/: +page.svelte  +page.ts
web_app/src/routes/rules/: +page.svelte
web_app/src/utils/: db_client.ts  validate.ts
